[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shades"
folder = "shades"
readme = "README.md"
requires-python = ">=3.9"
description = "A python module for generative 2D Image creation"
dynamic = ["version"]
dependencies = [
  "numpy>=1.20.0",
  "Pillow>=8.0.0",
]

[tool]
rye = { dev-dependencies = [
    "ipdb>=0.13.13",
] }

[tool.hatch.version]
path = "shades/__init__.py"
